fixed alignment issue with lore icon

--- a/src/pages/CharacterManagement/components/Skills/Skills.scss
+++ b/src/pages/CharacterManagement/components/Skills/Skills.scss
@@ -206,7 +206,7 @@
   gap: 0.5rem;
 
   & svg {
-    width: 1rem;
+    width: 2rem;
     height: 1rem;
     fill: var(--clr-white);
   }
